force-app/main/default/objects/Bank_GL__c/Bank_GL__c.object-meta.xml
<CustomObject>
    <label>Legal Entity</label>
    <nameField>
        <label>Legal Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Entity</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>