force-app/main/default/objects/Bank_GL__c/fields/Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder__c</fullName>
    <label>Account Holder</label>
    <length>100</length>
    <type>Text</type>
</CustomField>