force-app/main/default/objects/Bank_GL__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name (Flat Cost)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Emirates Islamic Bank</fullName>
            </value>
            <value>
                <fullName>FAB (First Abu Dhabi Bank)</fullName>
            </value>
            <value>
                <fullName>RAKBANK</fullName>
            </value>
            <value>
                <fullName>Emirates ND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>