force-app/main/default/objects/Bank_GL__c/fields/Bank_Name_Service_tax__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name_Service_tax__c</fullName>
    <label>Bank Name (Service tax)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>