force-app/main/default/objects/Bank_GL__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <label>Beneficiary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>