force-app/main/default/objects/Bank_GL__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>TextArea</type>
</CustomField>