force-app/main/default/objects/Bank_GL__c/fields/Developer_ID__c.field-meta.xml
<CustomField>
    <fullName>Developer_ID__c</fullName>
    <label>Developer / ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>