force-app/main/default/objects/Bank_GL__c/fields/Favouring__c.field-meta.xml
<CustomField>
    <fullName>Favouring__c</fullName>
    <label>Favouring</label>
    <length>100</length>
    <type>Text</type>
</CustomField>