force-app/main/default/objects/Bank_GL__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <label>IBAN (Flat Cost)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>