force-app/main/default/objects/Bank_GL__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>PropStrength__Projects__c</referenceTo>
    <relationshipName>Bank_GL</relationshipName>
    <type>Lookup</type>
</CustomField>