force-app/main/default/objects/Bank_GL__c/fields/Project_Name_Id_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Id_Arabic__c</fullName>
    <label>Project Name /Id Arabic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>