force-app/main/default/objects/Bank_GL__c/fields/RDS_Address1__c.field-meta.xml
<CustomField>
    <fullName>RDS_Address1__c</fullName>
    <label>Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>