force-app/main/default/objects/Bank_GL__c/fields/Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>Swift_Code__c</fullName>
    <label>Swift Code (Flat Cost)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>